fix image getting cut off on small widths;
also, remove the 600px width limit to allow bigger images to fit better.

--- a/lapis-k.css
+++ b/lapis-k.css
@@ -8,7 +8,7 @@
 
     body {
         background: #ECEFF1 !important;
-    }
+    }vv
 
     a,
     .button,
@@ -2475,10 +2475,14 @@
         padding: 12px 15px !important;
     }
 
+    ._unit._work-detail-unit .works_display img {
+        max-width: 100% !important;
+    }
+  
     ._unit._work-detail-unit .works_display {
 
         /*** MEMBER ILLUUSTRATION RIGHT CONTENT WORKS ***/
-        width: 40vw !important;
+        width: auto !important;
     }
 
     .read-more.js-click-trackable {
